[gd_scene load_steps=7 format=3 uid="uid://cm4p1kgg25oqw"]

[ext_resource type="Script" uid="uid://bskqj3x211xg" path="res://addons/GodotAiSuite/toolbar/toolbar.gd" id="1_vqp6w"]
[ext_resource type="Texture2D" uid="uid://cb314l7fd20ew" path="res://addons/GodotAiSuite/assets/prompt_library_icon.png" id="2_d48d6"]

[sub_resource type="Image" id="Image_p8200"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 64, 224, 224, 224, 255, 227, 227, 227, 63, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 5, 225, 225, 225, 142, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 140, 255, 255, 255, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 192, 224, 224, 224, 255, 225, 225, 225, 191, 0, 0, 0, 0, 0, 0, 0, 0, 225, 225, 225, 143, 224, 224, 224, 255, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 255, 224, 224, 224, 137, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 192, 224, 224, 224, 255, 225, 225, 225, 191, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 236, 224, 224, 224, 255, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 255, 224, 224, 224, 231, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 64, 224, 224, 224, 255, 227, 227, 227, 63, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 235, 224, 224, 224, 255, 224, 224, 224, 65, 225, 225, 225, 67, 224, 224, 224, 255, 224, 224, 224, 231, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 139, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 225, 225, 225, 135, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 4, 224, 224, 224, 138, 224, 224, 224, 255, 224, 224, 224, 255, 225, 225, 225, 135, 255, 255, 255, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 4, 224, 224, 224, 255, 224, 224, 224, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 3, 224, 224, 224, 255, 224, 224, 224, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 3, 224, 224, 224, 255, 224, 224, 224, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 2, 224, 224, 224, 255, 224, 224, 224, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 2, 224, 224, 224, 255, 224, 224, 224, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 247, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 246, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 1, 224, 224, 224, 255, 224, 224, 224, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 225, 225, 225, 183, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 179, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 224, 224, 224, 255, 224, 224, 224, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 231, 231, 231, 21, 224, 224, 224, 179, 224, 224, 224, 237, 224, 224, 224, 179, 230, 230, 230, 20, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 225, 225, 225, 190, 224, 224, 224, 188, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_xurea"]
image = SubResource("Image_p8200")

[sub_resource type="Image" id="Image_xurea"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 142, 164, 245, 70, 140, 164, 243, 244, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 140, 165, 243, 242, 142, 166, 243, 63, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 141, 164, 244, 132, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 140, 165, 243, 124, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 141, 164, 244, 132, 140, 165, 243, 124, 141, 164, 244, 132, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 140, 165, 243, 124, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 141, 164, 244, 132, 140, 165, 243, 124, 141, 164, 244, 132, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 140, 165, 243, 124, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 139, 166, 246, 77, 140, 165, 243, 240, 141, 166, 245, 74, 143, 165, 244, 68, 141, 165, 243, 243, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 141, 164, 243, 241, 140, 165, 243, 62, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 140, 166, 243, 100, 141, 165, 243, 255, 140, 164, 243, 182, 0, 0, 0, 0, 0, 0, 0, 0, 141, 164, 244, 132, 141, 165, 243, 255, 140, 165, 243, 124, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 139, 162, 244, 22, 141, 165, 243, 252, 141, 164, 243, 250, 141, 165, 244, 107, 141, 165, 243, 187, 140, 165, 243, 251, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 140, 164, 243, 247, 141, 165, 245, 76, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 141, 165, 243, 190, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 140, 165, 244, 215, 128, 128, 255, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 141, 166, 245, 74, 140, 164, 243, 233, 141, 165, 243, 179, 141, 164, 243, 188, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 141, 164, 243, 123, 170, 170, 255, 3, 140, 165, 243, 220, 141, 165, 243, 255, 140, 165, 243, 82, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 141, 167, 247, 58, 141, 164, 243, 219, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 140, 164, 246, 53, 0, 0, 0, 0, 142, 164, 243, 81, 140, 165, 244, 235, 141, 164, 244, 67, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 142, 170, 255, 9, 140, 165, 243, 142, 140, 164, 243, 253, 141, 165, 243, 255, 141, 164, 243, 210, 140, 165, 243, 224, 141, 165, 243, 255, 142, 164, 244, 90, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 140, 166, 243, 60, 140, 165, 243, 218, 141, 165, 243, 255, 140, 165, 243, 251, 140, 166, 244, 131, 128, 170, 255, 6, 139, 166, 245, 97, 141, 165, 243, 255, 140, 165, 244, 215, 140, 164, 243, 104, 141, 164, 243, 188, 141, 165, 243, 243, 141, 166, 245, 74, 0, 0, 0, 0, 0, 0, 0, 0, 141, 164, 242, 78, 140, 164, 243, 253, 141, 165, 243, 255, 141, 164, 243, 210, 143, 163, 245, 50, 0, 0, 0, 0, 0, 0, 0, 0, 128, 192, 255, 4, 140, 165, 243, 220, 141, 165, 243, 255, 141, 165, 243, 255, 141, 165, 243, 255, 140, 164, 243, 247, 142, 164, 245, 70, 0, 0, 0, 0, 0, 0, 0, 0, 139, 163, 245, 75, 141, 164, 242, 236, 140, 166, 244, 131, 128, 170, 255, 6, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 139, 166, 246, 77, 141, 165, 243, 234, 141, 165, 243, 179, 141, 166, 245, 94, 136, 170, 255, 15, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_e7qfh"]
image = SubResource("Image_xurea")

[node name="Toolbar" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_vqp6w")

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 2
tooltip_text = "Godot AI Suite Settings"
text = "Settings"
icon = SubResource("ImageTexture_xurea")
flat = true
alignment = 0

[node name="PromptsButton" type="Button" parent="."]
layout_mode = 2
tooltip_text = "Prompt Library"
text = "Prompt Library"
icon = ExtResource("2_d48d6")
flat = true
alignment = 0

[node name="AgentButton" type="Button" parent="."]
layout_mode = 2
tooltip_text = "Paste & Parse Response"
text = "Paste Response"
icon = SubResource("ImageTexture_e7qfh")
flat = true
alignment = 0

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="ExportButton" type="Button" parent="."]
layout_mode = 2
text = "Generate Masterprompt"
